--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   expandable: ^5.0.1
   animated_theme_switcher: ^2.0.6
   percent_indicator: ^4.0.1
+  carousel_slider: ^4.1.1
 
 
 dev_dependencies:
