--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   stream_feed_flutter_core: ^0.8.0
   google_fonts: ^3.0.1
   transparent_image: ^2.0.0
+  in_app_purchase: ^3.0.6
 
 
 dev_dependencies:
