--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,9 @@ dependencies:
   transparent_image: ^2.0.0
   in_app_purchase: ^3.0.6
   flutter_awesome_select: ^6.4.0
+  flutter_slidable: ^1.3.0
+  multi_select_flutter: ^4.1.2
+  share_plus: ^4.0.10
 
 
 dev_dependencies:
