--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ dependencies:
   flutter_slidable: ^1.3.0
   multi_select_flutter: ^4.1.2
   share_plus: ^4.0.10
+  extended_nested_scroll_view: ^5.1.2
 
 
 dev_dependencies:
