--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,8 @@ dependencies:
   multi_select_flutter: ^4.1.2
   share_plus: ^4.0.10
   extended_nested_scroll_view: ^5.1.2
+  flutter_form_builder: ^7.3.1
+  form_builder_validators: ^8.1.1
 
 
 dev_dependencies:
