--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -47,5 +47,41 @@
 	<true/>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Allow access to photo library</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+	<dict>
+	<key>CFBundleTypeRole</key>
+		<string>Editor</string>
+	<key>CFBundleURLSchemes</key>
+	<array>
+		<string>fb519234586613546</string>
+		<string>com.googleusercontent.apps.1004826567685-994ov24js8obh3raecddvdoi0q8n5bnh</string>
+	</array>
+	</dict>
+	</array>
+	<key>FacebookAppID</key>
+	<string>519234586613546</string>
+	<key>FacebookClientToken</key>
+	<string>432784ee0f1a590e45a7341587fe0e96</string>
+	<key>FacebookDisplayName</key>
+	<string>PxP</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+	<string>fbapi</string>
+	<string>fbapi20130214</string>
+	<string>fbapi20130410</string>	
+	<string>fbapi20130702</string>
+	<string>fbapi20131010</string>
+	<string>fbapi20131219</string>
+	<string>fbapi20140410</string>
+	<string>fbapi20140116</string>
+	<string>fbapi20150313</string>
+	<string>fbapi20150629</string>
+	<string>fbapi20160328</string>
+	<string>fbauth</string>
+	<string>fb-messenger-share-api</string>
+	<string>fbauth2</string>
+	<string>fbshareextension</string>
+	</array>
 </dict>
 </plist>
