--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,11 @@ dependencies:
   extended_nested_scroll_view: ^5.1.2
   flutter_form_builder: ^7.3.1
   form_builder_validators: ^8.1.1
+  sign_in_with_apple: ^4.0.0
+  flutter_config: ^2.0.0
+  twitter_login: ^4.2.3
+  flutter_facebook_auth: ^4.3.4+2
+  google_sign_in: ^5.3.3
 
 
 dev_dependencies:
