--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@
 .history
 .svn/
 *.env
+.pages/test.dart
+*.bashrc
 
 # IntelliJ related
 *.iml
@@ -45,3 +47,4 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
