--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,7 +60,6 @@ dependencies:
   stream_feed_flutter_core: ^0.8.0
   google_fonts: ^3.0.1
   transparent_image: ^2.0.0
-  in_app_purchase: ^3.0.6
   flutter_awesome_select: ^6.4.0
   flutter_slidable: ^1.3.0
   multi_select_flutter: ^4.1.2
@@ -73,6 +72,7 @@ dependencies:
   twitter_login: ^4.2.3
   flutter_facebook_auth: ^4.3.4+2
   google_sign_in: ^5.3.3
+  purchases_flutter: ^3.8.0
 
 
 dev_dependencies:
