--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,7 @@ dependencies:
   flutter_facebook_auth: ^4.3.4+2
   google_sign_in: ^5.3.3
   purchases_flutter: ^3.8.0
+  flutter_svg: ^1.1.1+1
 
 
 dev_dependencies:
@@ -102,6 +103,7 @@ flutter:
     - assets/images/
     - assets/videos/
     - assets/epub/
+    - assets/icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
